Update CourseManager.java